# sycp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  requirements.txt
Introdução ao Hacking e Pentest 2.0/assets/: bancocn.com.txt
Introdução ao Hacking e Pentest 2.0/aulas/: Aula 1 - Como ser um Hacker - O que é um Pentest.md  Aula 10 - Shell Upload - Invadindo o servidor com Shell Reversa.md  Aula 11 - Post exploitation, Hashing e Criptografia.md  Aula 12 - Linux Privilege escalation - Obtendo maiores privilégios.md  Aula 13 - Pivoting - Comprometendo toda a rede.md  Aula 14 - Elevando o seu nível - Por diversão e lucro.md  Aula 2 - Instalando o sistema dos Hackers - Kali Linux.md  Aula 3 - Introdução ao Kali Linux.md  Aula 4 - Footprinting - Coleta de informações.md  Aula 5 - Reconhecimento com Nmap - Analisando o alvo.md  Aula 6 - Criando suas próprias ferramentas hacker.md  Aula 7 - Reconhecimento Web - Encontrando vulnerabilidades.md  Aula 8 - SQL Injection - Atacando o Servidor.md  Aula 9 - Cross-Site Scripting (XSS) - Atacando o Cliente.md
Introdução ao Hacking e Pentest 2.0/scripts/: dnsbrute.py  portscan.py  shell.php7
assets/: header.avif
aulas/Módulo 1 - Introdução/: Aula 1 - Introdução ao Curso.md  Bônus.md
aulas/Módulo 2 - Dominando o Linux para Pentesters/: Aula 4 - Comandos Básicos do Linux.md  Aula 5 - Usuários e Permissões no Linux.md  Aula 7 - Gerenciamento de pacotes.md  Aula 8 - Cronjobs.md
aulas/Módulo 3 - Introdução ao Shell Script para Pentesters/: Aula 2 - Estruturas Condicionais.md  script.sh
aulas/Módulo 4 - Introdução ao Python para Pentesters/: Aula 1 - Introdução ao Python.md  script.py
aulas/Módulo 5 - Introdução a Linguagem C para Pentesters/: Aula 1 - Introdução ao C.md  Aula 4- Estruturas de Repetição.md  Aula 5 - Passagem de Argumentos.md
aulas/Módulo 6 -  Introdução ao PowerShell para Pentesters/: Aula 2 - Introdução ao PowerShell.md
aulas/Módulo 7 - Redes para Pentesters/: Aula 10 - Server TCP.md  Aula 2 - Netcat.md  Aula 6 - NAT.md  Aula 8 - Socket e Client TCP.md  Aula 9 - Cliente UDP.md
aulas/Módulo 8 - Reconhecimento com OSINT/: Aula 1 - Introdução à coleta de informações.md  Aula 2 - Google Hacking.md  Aula 3 - Google Hacking Database (GHDB).md  (+1 more)
scripts/: script.c
sycp/: mkdocs.yml
sycp/aulas/mod_1/: 1.md
sycp/scripts/: script.sh
translations/: README_pt-br.md
(+134 files in other folders)
