[tool.poetry]
name = "sycp"
version = "1.0"
description = "Anotações realizadas durante a certificação SYCP 2023"
authors = ["Marcelo Machado <marcelojmachadojr@proton.me>"]
license = "CC BY-NC-SA 4.0 Deed"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.7"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.18"
mkdocs-glightbox = "^0.3.7"
mkdocs-git-authors-plugin = "^0.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[tool.taskipy.tasks]
serve = {cmd="mkdocs serve -f sycp/mkdocs.yml --dev-addr localhost:8080", help="executa o servidor local do mkdocs"}
deploy = {cmd="mkdocs gh-deploy", help="faz o deploy da página em produção"}
build = {cmd="mkdocs build", help="constroi as páginas HTML"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
